<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        >

    </ProgressBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_margin="10dp"
        app:fabSize="mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="fap"
        android:layout_alignParentRight="true"
       />



    <ImageView
        android:id="@+id/img1"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        >
    </ImageView>

    <TextView
        android:visibility="gone"
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img1"
        android:layout_centerHorizontal="true"
        android:text="Name"
        android:textSize="18dp"></TextView>

    <TextView
        android:id="@+id/username"
        android:textSize="18dp"

        android:layout_below="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="username"
        >
    </TextView>

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        >

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/location"
            android:textSize="18dp"
            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            android:padding="5dp"
            android:drawablePadding="5dp"

            />

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/company"
            android:drawablePadding="5dp"
            android:textSize="18dp"
            android:drawableLeft="@drawable/ic_baseline_location_city_24"
            android:padding="5dp"

            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        >


        <TextView
            android:id="@+id/repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/repository"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_baseline_library_books_24"
            android:padding="5dp"
            />


        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/followers"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/following"
            android:padding="5dp"
            />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:layout_below="@id/line2"
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     />
    <androidx.viewpager2.widget.ViewPager2
        android:layout_below="@+id/tabs"
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>